golang-github-coreos-pkg (2-1) unstable; urgency=medium

  * Team upload.
  * New upstream release.
  * (Build-)Depends += "golang-golang-x-crypto-dev".
  * Standards-Version: 3.9.8.
  * Vcs-Git URL to HTTPS.
  * Updated "watch" file.

 -- Dmitry Smirnov <onlyjob@debian.org>  Sun, 19 Jun 2016 21:41:23 +1000

golang-github-coreos-pkg (0.0~git20151028.0.2c77715-1) unstable; urgency=medium

  * Initial release (Closes: #804108)

 -- Tim Potter <tpot@hpe.com>  Thu, 05 Nov 2015 13:44:32 +1100